<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name -->
    <string name="app_name">Galaxy S Advance Settings</string>

    <!-- TAB: General -->
    <string name="category_general_title">General</string>

    <!-- CATEGORY: Radio mode -->
    <string name="radio_subcat_title">Radio mode</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <!-- CATEGORY: Accelerometer -->
    <string name="accelerometer_subcat_title">Accelerometer</string>
    <string name="use_accelerometer_calibration_title_head">Use calibration data</string>
    <string name="use_accelerometer_calibration_summary_head">Use the accelerometer calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_accelerometer_title_head">Calibrate</string>
    <string name="calibrate_accelerometer_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="accelerometer_dialog_head">Calibration done</string>
    <string name="accelerometer_dialog_message">The sensor has been successfully calibrated.</string>

    <!-- TAB: Screen -->
    <string name="category_screen_title">Screen</string>

    <!-- CATEGORY: Colors -->
    <string name="screen_colors_title">Colors</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>

    <!-- CATEGORY: TouchScreen -->
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="use_sweep2wake_title_head">Sweep2Wake</string>
    <string name="use_sweep2wake_summary_head">Unlock device with a swype</string>

    <!-- TAB: USB -->
    <string name="category_usb_title">Usb</string>

    <!-- CATEGORY: USB OTG Settings -->
    <string name="otg_subcat_title">USB OTG Settings</string>
    <string name="otg_power_title_head">USB-VBUS Power</string>
    <string name="otg_power_summary_head">Enables output voltage to the USB port</string>

    <!-- CATEGORY: Charger Control -->
    <string name="cc_subcat_title">Charger control</string>
    <string name="ac_cc_title_head">Wall charger currency</string>
    <string name="ac_cc_summary_head">Wall charger currency in mAh, low levels protect battery but takes longer to charge, high levels may damage battery life</string>
    <string name="usb_cc_title_head">USB cable currency</string>
    <string name="usb_cc_summary_head">USB cable currency in mAh, useful to implement Fast Charge, low levels protect battery but takes longer to charge, high levels may damage battery life</string>

    <!-- CATEGORY: Charger Control -->
    <string name="deepsleep_subcat_title">Deep Sleep</string>
    <string name="deepest_sleep_title_head">Deepest sleep state</string>
    <string name="deepest_sleep_summary_head">Specify the highest deep sleep level</string>
    
    
    <!-- TAB: ADVANCED -->
    <string name="category_advanced_title">Advanced</string>

    <!-- CATEGORY: FSync -->
    <string name="fsync_subcat_title">FSync</string>
    <string name="fsync_title_head">FSync mode</string>
    <string name="fsync_summary_head">Disabling fsync can improve IO performace, but it may cause data corruption. Dynamic fsync will sync all buffers when screen turns off.</string>

    <!-- CATEGORY: GPU -->
    <string name="gpu_subcat_title">GPU</string>
    <string name="mali_l2_mr_title_head">Mali L2 Max Reads</string>
    <string name="mali_l2_mr_summary_head">Increasing it may improve graphics performance.</string>
    <string name="mali_pam_title_head">Mali Pre-allocated memory size</string>
    <string name="mali_pam_summary_head">Increasing it may improve graphics performance.</string>
    
    <!-- CATEGORY: MMC -->
    <string name="mmc_subcat_title">MMC</string>
    <string name="use_spi_crc_title_head">Disable SPI CRC</string>
    <string name="use_spi_crc_summary_head">Disabling SPI CRC can improve mmc performance (10% - 30%) but phone may freeze randomly</string>
    
</resources>
