<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name" >

    <PreferenceCategory android:title="@string/screen_colors_title" >

        <!-- Panel gamma -->
        <com.cyanogenmod.settings.device.PanelGamma
            android:defaultValue="0"
            android:entries="@array/panel_gamma_entries"
            android:entryValues="@array/panel_gamma_entries_values"
            android:key="panel_gamma"
            android:summary="@string/panel_gamma_summary_head"
            android:title="@string/panel_gamma_title_head" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/touchscreen_subcat_title" >
        <com.cyanogenmod.settings.device.TouchscreenSensitivity
            android:defaultValue="val=17"
            android:entries="@array/touchscreen_sensitivity_entries"
            android:entryValues="@array/touchscreen_sensitivity_entries_values"
            android:key="touchscreen_sensitivity"
            android:summary="@string/touchscreen_sensitivity_summary_head"
            android:title="@string/touchscreen_sensitivity_title_head" />

        <!-- Swipe2Wake settings -->
        <CheckBoxPreference
            android:key="use_sweep2wake"
            android:summary="@string/use_sweep2wake_summary_head"
            android:title="@string/use_sweep2wake_title_head" />
    </PreferenceCategory>

</PreferenceScreen>