<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/radio_subcat_title" >

        <!-- Hspa modes -->
        <com.cyanogenmod.settings.device.Hspa
            android:defaultValue="23"
            android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:key="hspa"
            android:summary="@string/hspa_summary_head"
            android:title="@string/hspa_title_head" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/accelerometer_subcat_title" >

        <!-- Use sensor calibration -->
        <CheckBoxPreference
            android:key="use_accelerometer_calibration"
            android:summary="@string/use_accelerometer_calibration_summary_head"
            android:title="@string/use_accelerometer_calibration_title_head" />

        <!-- Do accelerometer calibration -->
        <Preference
            android:key="calibrate_accelerometer"
            android:summary="@string/calibrate_accelerometer_summary_head"
            android:title="@string/calibrate_accelerometer_title_head" />
    </PreferenceCategory>

</PreferenceScreen>
